--- a/theater.html
+++ b/theater.html
@@ -48,5 +48,42 @@
         can't see straight after all these figures.... Three... one... six...
         four... one... five.... [Uses the counting-frame.]<br>
     </p>
+    <h4 class="KHIRIN">KHIRIN.</h4>
+    <p class="direction">[Standing up]</p>
+    <p class="speech">I have the honour to congratulate you, Andrey
+        Andreyevitch, on the fiftieth anniversary of our Bank
+    </p>
+    <h4 class="SHIPUCHIN">SHIPUCHIN.</h4>
+    <p class="direction">[Warmly shakes hands]</p>
+    <p class="speech"> I am very, very
+        glad! Thank you for your service... for everything! If, in the course of
+        the time during which I have had the honour to be Chairman of this Bank
+        anything useful has been done, the credit is due, more than to anybody
+        else, to my colleagues.
+    </p>
+    <h4 class="KHIRIN">KHIRIN.</h4>
+    <p class="direction">[Uses the counting-frame]</p>
+    <p class="speech">Two... nought... nought... three... nine... two... nought. I
+    can't see straight after all these figures.... Three... one... six...
+    four... one... five....
+    </p>
+    <h4 class="SHIPUCHIN">SHIPUCHIN.</h4>
+    <p class="direction">[Sits and reads the report to himself]</p>
+    <p class="speech"> I'm hellishly
+        tired.... My gout kept on giving me trouble last night, all the morning
+        I was running about, and then these excitements, ovations, agitations...
+        I'm tired!
+    </p>
+    <h4 class="KHIRIN">KHIRIN.</h4>
+    <p class="speech">If nothing occurs to disturb me, I'll get it done. Nothing of
+        any importance is now left.
+    </p>
+    <h4 class="SHIPUCHIN">SHIPUCHIN.</h4>
+    <p class="direction">[Changes his tone]</p>
+    <p class="speech"> Where's my report? Is it getting on?
+    </p>
+    <h4 class="KHIRIN">KHIRIN.</h4>
+    <p class="speech">Yes; there's only five pages left.
+    </p>
 </body>
 </html>
