--- a/theater.html
+++ b/theater.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Welcome to my WebPage</title>
+    <link rel="stylesheet" href="chekov.css">
 </head>
 <body>
     <h1>Nikitha Sri Garapati does Chekov tonight</h1>
