--- a/theater.html
+++ b/theater.html
@@ -86,5 +86,24 @@
     <h4 class="KHIRIN">KHIRIN.</h4>
     <p class="speech">Yes; there's only five pages left.
     </p>
+    <table>
+        <tbody>
+            <tr>
+                <th>character</th>
+                <th>Actor</th>
+                <th>Understudy</th>
+            </tr>
+            <tr>
+                <td>Khirin</td>
+                <td>Andrew</td>
+                <td>Stuart</td>
+              </tr>
+              <tr>
+                <td>Shipuchin</td>
+                <td>William</td>
+                <td>Zachary</td>
+              </tr>
+        </tbody>
+    </table>
 </body>
 </html>
