--- a/theater.html
+++ b/theater.html
@@ -87,7 +87,7 @@
     <p class="speech">Yes; there's only five pages left.
     </p>
     <hr>
-    <table>
+    <table border="1">
             <tr>
                 <th>character</th>
                 <th>Actor</th>
