--- a/theater.html
+++ b/theater.html
@@ -89,7 +89,7 @@
     <hr>
     <table border="1">
             <tr>
-                <th>character</th>
+                <th>Character</th>
                 <th>Actor</th>
                 <th>Understudy</th>
             </tr>
