--- a/theater.html
+++ b/theater.html
@@ -103,6 +103,11 @@
                 <td>William</td>
                 <td>Zachary</td>
               </tr>
+            <tr>
+                <td>Zara</td>
+                <td>Steve</td>
+                <td>Mary</td>
+            </tr>
     </table>
 </body>
 </html>
