--- a/theater.html
+++ b/theater.html
@@ -110,5 +110,5 @@
             </tr>
     </table>
 </body>
-<link rel="first page" href="winter.html">
+<a href="winter.html">Click here for the second page</a>
 </html>
