--- a/winter.html
+++ b/winter.html
@@ -28,5 +28,5 @@
         I'm tired!
     </p>
 </body>
-<link rel="first page" href="theater.html">
+<a href="theater.html">Click here for the first page</a>
 </html>
