--- a/winter.html
+++ b/winter.html
@@ -27,6 +27,29 @@
         I was running about, and then these excitements, ovations, agitations...
         I'm tired!
     </p>
+    <hr>
+    <table border="1">
+            <tr>
+                <th>Character</th>
+                <th>Actor</th>
+                <th>Understudy</th>
+            </tr>
+            <tr>
+                <td>Khirin</td>
+                <td>Andrew</td>
+                <td>Stuart</td>
+              </tr>
+              <tr>
+                <td>Shipuchin</td>
+                <td>William</td>
+                <td>Zachary</td>
+              </tr>
+            <tr>
+                <td>Zara</td>
+                <td>Steve</td>
+                <td>Mary</td>
+            </tr>
+    </table>
 </body>
 <a href="theater.html">Click here for the first page</a>
 </html>
