--- a/theater.html
+++ b/theater.html
@@ -111,4 +111,15 @@
     </table>
 </body>
 <a href="winter.html">Click here for the second page</a>
+<img src="snowman.jpg" width="500px">
+<br>
+<i class="fa fa-snow"></i>
+<i class="fa fa-man"></i>
+<i class="fa fa-scarf"></i>
+<i class="fa fa-flowers"></i>
+<i class="fa fa-cup"></i>
+<ul class="Navbar">
+    <li> <a href="theatre.html">Theatre Page</a></li>
+    <li> <a href="winter.html">Winter Page</a></li>
+</ul>
 </html>
