--- a/bonus.html
+++ b/bonus.html
@@ -7,9 +7,9 @@
 <h1>Bonus</h1>
 <img src="snowman.jpg" width="500px">
 <br>
-<i class="fa fa-snow"></i>
-<i class="fa fa-man"></i>
-<i class="fa fa-scarf"></i>
+<i class="fa fa-car"></i>
+<i class="fa fa-heart"></i>
+<i class="fa fa-cloud"></i>
 <i class="fa fa-flowers"></i>
 <i class="fa fa-cup"></i>
 <ul class="Navbar">
