--- a/bonus.html
+++ b/bonus.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Bonus</title>
+    <link rel="stylesheet" href="
+https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <h1>Bonus</h1>
 <img src="snowman.jpg" width="500px">
